
univention-directory-manager-modules (13.0.25-2) unstable; urgency=low

  * Bug #47861: make error messages more accurate

 -- Daniel Troeder <troeder@univention.de>  Mon, 15 Oct 2018 11:12:17 +0200

univention-directory-manager-modules (13.0.24-3) unstable; urgency=medium

  * Bug #47861: Documentation fixes
  * Bug #47861: auto_reload after save

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 09 Oct 2018 18:29:10 +0200

univention-directory-manager-modules (13.0.24-2) unstable; urgency=low

  * Bug #47861: make source of error messages distinguishable

 -- Daniel Troeder <troeder@univention.de>  Tue, 02 Oct 2018 16:53:01 +0200

univention-directory-manager-modules (13.0.24-1) unstable; urgency=low

  * Bug #47818: settings/portal.py: reread computer object if computer
    module as not been initialized before

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 14 Sep 2018 14:22:36 +0200

univention-directory-manager-modules (13.0.23-5) unstable; urgency=medium

  * Bug #40672: fix broken search filter generation for boolean and
    multivalue/complex properties

 -- Johannes Keiser <keiser@univention.de>  Thu, 20 Sep 2018 09:45:56 +0200

univention-directory-manager-modules (13.0.23-4) unstable; urgency=medium

  * Bug #47580: Fix problem with converting into unicode

 -- Ole Schwiegert <schwiegert@univention.de>  Tue, 19 Sep 2018 10:49:43 +0200

univention-directory-manager-modules (13.0.23-3) unstable; urgency=medium

  * Bug #47580: Correct type for UCR variable

 -- Ole Schwiegert <schwiegert@univention.de>  Tue, 18 Sep 2018 17:30:28 +0200

univention-directory-manager-modules (13.0.23-2) unstable; urgency=medium

  * Bug #46927: a portal entry can now have multiple allowed groups

 -- Johannes Keiser <keiser@univention.de>  Tue, 18 Sep 2018 14:49:21 +0200

univention-directory-manager-modules (13.0.23-1) unstable; urgency=low

  * Bug #41109:
   - do not update univentionLastUsedValue for uidNumber if