@@ -64,3 +64,6 @@ class GroupsGroupUdm1Module(GenericUdm1Module):
 	"""GroupsGroupUdm1Object factory"""
 	_udm_object_class = GroupsGroupUdm1Object
 	supported_api_versions = (1,)
+
+	def _get_default_positions_property(self):
+		return 'groups'
